Refactor render function

--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 .gameboard {
   background-color: brown;
   margin: 0 auto;
-  aspect-ratio: 1 / 1;
   width: 30%;
+  aspect-ratio: 1 / 1;
   display: grid;
   gap: 5px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
 }
 
-.square {
+.cell {
   background-color: burlywood;
 }
