--- a/style.css
+++ b/style.css
@@ -1,28 +1,115 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
+html {
+  min-height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  flex-grow: 1;
+  background-color: #f4f0cb;
+}
+
 .gameboard-container {
-  background-color: azure;
+  background-color: #b7c68b;
+  min-height: 100vh;
+  width: 60vmin;
+  margin: 0 auto;
 }
 
 .gameboard {
-  background-color: brown;
+  --radius: 10%;
+  border-radius: var(--radius);
+  background-color: #8b4513;
   margin: 0 auto;
-  width: 30%;
+  width: 60vmin;
   aspect-ratio: 1 / 1;
   display: grid;
-  gap: 5px;
+  gap: 0.6vmin;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
 }
 
 .cell {
-  background-color: burlywood;
-}
-
-.game-status {  
-  font-size: 1.5rem;
-  font-weight: bold;
-  font-family: sans-serif;
-  height: 15vh;
+  background-image: url(./wood.jpg);
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 10vmin;
+}
+
+.game-status {
+  font-size: 5vmin;
+  font-weight: bold;
+  font-family: sans-serif;
+  height: 20vmin;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+[data-index="0"] {
+  border-top-left-radius: var(--radius);
+}
+
+[data-index="2"] {
+  border-top-right-radius: var(--radius);
+}
+
+[data-index="6"] {
+  border-end-start-radius: var(--radius);
+}
+
+[data-index="8"] {
+  border-end-end-radius: var(--radius);
+}
+
+.start-screen {
+  /* display: none; */
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #b7c68b;
+  padding: 20vmin 0;
+}
+
+.start-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.screen-title {
+  font-family: Pacifico, sans-serif;
+  font-size: 12vmin;
+}
+
+.player-names {
+  display: flex;
+  align-items: center;
+  gap: 5vmin;
+}
+
+.versus {
+  clip-path: inset(10px 10px 10px 10px);
+  height: 20vmin;
+}
+
+.player-name {
+  border-radius: 2vmin;
+  height: 8vmin;
+  width: 30vmin;
+  text-align: center;
+  font-size: 3.5vmin;
+}
+
+.player-name::placeholder {
+  text-align: center;
+  font-size: 3.5vmin;
+  font
 }
