--- a/style.css
+++ b/style.css
@@ -17,15 +17,18 @@ body {
   min-height: 100vh;
   width: 100vmin;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .gameboard {
   --radius: 10%;
   border-radius: var(--radius);
   background-color: #8b4513;
-  margin: 0 auto;
   width: 60vmin;
-  aspect-ratio: 1 / 1;
+  height: 60vmin;
   display: grid;
   gap: 0.6vmin;
   grid-template-columns: repeat(3, 1fr);
@@ -39,16 +42,15 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 10vmin;
+  font-family: Verdana, sans-serif;
+  font-weight: bold;
 }
 
 .game-status {
-  font-size: 5vmin;
+  font-size: 7vmin;
   font-weight: bold;
-  font-family: sans-serif;
-  height: 20vmin;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-family: Verdana, sans-serif;
+  line-height: 1;
 }
 
 [data-index="0"] {
@@ -67,13 +69,12 @@ body {
   border-end-end-radius: var(--radius);
 }
 
-.start-screen {
-  /* display: none; */
+.start-screen {  
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: #b7c68b;
-  padding: 15vmin 0;
+  padding: 10vmin 0;
 }
 
 .start-content {
@@ -81,12 +82,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .screen-title {
   font-family: Pacifico, sans-serif;
   font-size: 12vmin;
+  line-height: 1;
 }
 
 .player-names {
@@ -96,8 +98,16 @@ body {
 }
 
 .versus {
-  clip-path: inset(10px 10px 10px 10px);
+  width: 15vmin;
+  height: 15vmin;
+  overflow: hidden;  
+}
+
+.versus-img {  
   height: 20vmin;
+  width: 20vmin;
+  margin: -2.5vmin 0 0 -1.8vmin;
+     
 }
 
 .player-name {
@@ -107,20 +117,17 @@ body {
   text-align: center;
   font-size: 3.5vmin;
   border-style: solid;
-  outline: none;  
+  outline: none;
 }
 
 .player-name::placeholder {
   text-align: center;
-  font-size: 3.5vmin;  
+  font-size: 3.5vmin;
 }
 
-.player-name:hover, .player-name:focus {
+.player-name:hover,
+.player-name:focus {
   border-color: hsl(17, 56%, 60%);
-}
-
-.game-mode, .start-btn {
-  margin: 2vmin 0;
 }
 
 .game-mode {
@@ -149,4 +156,12 @@ body {
 
 .game-mode .btn:hover {
   background-color: hsl(128, 65%, 70%);
+}
+
+.options-btn {
+  background-color: hsl(17, 76%, 64%);
+}
+
+.options-btn:hover {
+  background-color: hsl(17, 76%, 69%);
 }
